tests/baselines/reference/jsxChildrenSingleChildConfusableWithMultipleChildrenNoError.errors.txt
tests/cases/compiler/jsxChildrenSingleChildConfusableWithMultipleChildrenNoError.tsx(16,5): error TS2416: Property 'render' in type 'App' is not assignable to the same property in base type 'Component<{}, {}, any>'.
  Type '() => Element' is not assignable to type '() => ReactNode'.
    The 'this' types of each signature are incompatible.
      Type 'Component<P, S, SS>' is not assignable to type 'App'.
        Types of property 'render' are incompatible.
          Type '() => ReactNode' is not assignable to type '() => Element'.
            The 'this' types of each signature are incompatible.
              Type 'App' is not assignable to type 'Component<P, S, SS>'.
                Types of property 'props' are incompatible.
                  Type 'Readonly<{ children?: ReactNode; }> & Readonly<{}>' is not assignable to type 'Readonly<{ children?: ReactNode; }> & Readonly<P>'.
                    Type 'Readonly<{ children?: ReactNode; }> & Readonly<{}>' is not assignable to type 'Readonly<P>'.


==== tests/cases/compiler/jsxChildrenSingleChildConfusableWithMultipleChildrenNoError.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import * as React from 'react'
    
    type Tab = [string, React.ReactNode]  // [tabName, tabContent]
    
    interface Props {
        children: Tab[]
    }
    
    function TabLayout(props: Props) {
        return <div/>
    }
    
    export class App extends React.Component<{}> {
        render() {
        ~~~~~~
!!! error TS2416: Property 'render' in type 'App' is not assignable to the same property in base type 'Component<{}, {}, any>'.
!!! error TS2416:   Type '() => Element' is not assignable to type '() => ReactNode'.
!!! error TS2416:     The 'this' types of each signature are incompatible.
!!! error TS2416:       Type 'Component<P, S, SS>' is not assignable to type 'App'.
!!! error TS2416:         Types of property 'render' are incompatible.
!!! error TS2416:           Type '() => ReactNode' is not assignable to type '() => Element'.
!!! error TS2416:             The 'this' types of each signature are incompatible.
!!! error TS2416:               Type 'App' is not assignable to type 'Component<P, S, SS>'.
!!! error TS2416:                 Types of property 'props' are incompatible.
!!! error TS2416:                   Type 'Readonly<{ children?: ReactNode; }> & Readonly<{}>' is not assignable to type 'Readonly<{ children?: ReactNode; }> & Readonly<P>'.
!!! error TS2416:                     Type 'Readonly<{ children?: ReactNode; }> & Readonly<{}>' is not assignable to type 'Readonly<P>'.
            return <TabLayout>
                {[
                    ['Users', <div/>],
                    ['Products', <div/>]
                ]}
            </TabLayout>
        }
    }